# djan_setup

./: .gitignore  .python-version  pyproject.toml  readme.md  requirements.txt  script.py  setup.py
cli/: __init__.py  cli.py  main.py  script.py
